Upgrade to Java 21 on Iteration 19